@@ -1,31 +1,44 @@
 #include "registration.hpp"
 #include <sstream>
-#include <iostream>
+#include <algorithm>
+
 
 registration::registration(std::string file){
     this->file = file;
+
+    //Abre o arquivo de banco de dados dos jogadores
     users.open(file, std::ios::in | std::ios::out | std::ios::app);
+
+    //Verifica se foi aberto com sucesso
     if(users.is_open()){
         openfile_check = 1;
     }
 }
 
+
 registration::~registration(){
+    //Fecha o arquivo caso ele esteja aberto
     if(users.is_open()) {
         users.close();
     }
 }
 
 bool registration::isFileEmpty(){
+    //Limpa possíveis flags de erro do stream e verifica se o tamanho do arquivo é nulo
     users.clear();
     users.seekg(0, std::ios::end);
     return users.tellg() == 0;
 }
 
 void registration::new_user(std::string name, std::string password, int score, int games){
+    //Insere o novo usuário no final do arquivo
     users.clear();
     users.seekp(0, std::ios::end);
+
+    //Escreve as informações do player no arquivo
     users << score << " " << name << " " << password << " " << games << "\n";
+
+    //Verifica a possibilidade de atualizar o campeão
     if(score > get_max_score()){
         update_champion();
     }
@@ -34,29 +47,45 @@ void registration::new_user(std::string name, std::string password, int score, i
 std::string registration::get_stats(std::string name){
     std::string word, line;
     std::streampos pos;
-    int counter = 0, find = 0;
+    int counter = 0;
+
+    //Retorna uma string vazia caso o arquivo esteja vazio
     if(isFileEmpty()){
         return "";
     }
+
+    //Reposiciona o ponteiro de leitura para o início do arquivo
     users.seekg(0, std::ios::beg);
+
+    //Loop para percorrer todo o arquivo
     while(!users.eof()){
         counter = 0;
-        
         pos = users.tellg();
+
+        //Captura o username do usuário
         while(counter <= 1){
             users >> word;
             counter++;
         }
+
+        //Tenta localizar o username passado como parametro no arquivo
+        //Em caso positivo, retorna a linha do mesmo
         if(word == name){
-            find = 1;
             users.seekg(pos);
             std::getline(users, line);
             return line;
         }
         std::getline(users, line);
     }
+
+    //Retorna string vazia caso não encontre o jogador
     return "";
 
+}
+
+bool registration::compare_username(const player& p1, const player& p2){
+    //Compara o username para ordenação
+    return p1.username < p2.username;
 }
 
 std::vector<player> registration::get_all(){
@@ -64,9 +93,10 @@ std::vector<player> registration::get_all(){
     users.seekg(0, std::ios::beg);
     int score, games;
     std::string username, line, trash;
+
+    //Adiciona todos os usuários em um vector
     while(users.peek() != EOF){
         users >> score;
-        std::cout << score << std::endl;
         users >> username;
         users >> trash;
         users >> games;
@@ -74,6 +104,9 @@ std::vector<player> registration::get_all(){
         players.push_back(p);
         getline(users, line);
     }
+
+    //Ordena em ordem alfabética
+    std::sort(players.begin(), players.end(), compare_username);
     return players;
 }
 
@@ -82,8 +115,14 @@ void registration::update(std::string user, int score){
     int counter = 0;
     int games, new_score;
     std::string password;
+
+    //Recebe a linha correspondente ao jogador
     std::string line = get_stats(user); 
+
+    //Cria uma stringstream para possibilitar a leitura de dados
     std::stringstream line_user(line);
+
+    //Obtém as informações do jogador
     while(counter < 4){
         counter++;
         if(counter == 1){
@@ -96,14 +135,20 @@ void registration::update(std::string user, int score){
             line_user >> line;
         }
     }
+
+    //Atualiza a pontuação
     new_score = score;
+    //Incrementa a quantidade de jogos do jogador
     games++;
+
     int currentLine = 0;
     //Localizar a linha que deseja mudar
     int targetLine = getline_number(user);
+
     // Lê todas as linhas do arquivo
     users.clear();
     users.seekg(0, std::ios::beg);
+    //Obtém todas as linhas e insere no vector
     while (std::getline(users, line)) {
         if (currentLine == targetLine - 1) {
             // Altere a linha conforme necessário
@@ -119,8 +164,11 @@ void registration::update(std::string user, int score){
     for (const auto& l : lines) {
         users << l << "\n";
     }
+
     users.close();
+    //Reabre o arquivo
     users.open(file, std::ios::in | std::ios::out);
+    //Verifica a possibilidade de atualizar o campeão
     if(score > get_max_score()){
         update_champion();
     }
@@ -132,6 +180,7 @@ void registration::delete_user(std::string user){
     int currentLine = 0;
     //Localizar a linha que deseja remover
     int targetLine = getline_number(user);
+
     // Lê todas as linhas do arquivo
     users.clear();
     users.seekg(0, std::ios::beg);
@@ -149,77 +198,98 @@ void registration::delete_user(std::string user){
     for (const auto& l : lines) {
         users << l << "\n";
     }
+
     users.close();
+    //Reabre o arquivo
     users.open(file, std::ios::in | std::ios::out);
+
     update_champion();
 }
 
 int registration::get_max_score(){
     int max_score;
+
     users.clear();
+    //Posiciona o ponteiro de leitura para a linha do campeão
     users.seekg(pos_champion);
+
+    //Leitura da pontuação
     users >> max_score;
     return max_score;
 }
 
-void registration::update_champion() {
+void registration::update_champion(){
     std::string line;
     std::streampos pos_max = 0;
     int score;
-    score_champion = -1; // ou 0, para reiniciar
+    score_champion = -1;
 
     users.clear();
     users.seekg(0, std::ios::beg);
 
     while (users.peek() != EOF) {
-        std::streampos pos = users.tellg(); // salva a posição do início da linha
-
+        //Salva a posição do início da linha
+        std::streampos pos = users.tellg(); 
         std::getline(users, line);
 
-        if (line.empty()) continue; // ignora linhas vazias
+        //Ignora linhas vazias
+        if (line.empty()) continue; 
 
         std::istringstream iss(line);
         iss >> score;
 
         if (score > score_champion) {
             score_champion = score;
-            pos_champion = pos; // salva a posição da linha com maior score
+            //Salva a posição da linha com maior score
+            pos_champion = pos; 
         }
     }
 }
 
 int registration::getline_number(std::string user){
-    users.clear();
-    users.seekg(0, std::ios::beg);
     std::string word, line;
     std::streampos pos;
-    int counter = 0, find = 0, linenumber = 0;
+    int counter = 0, linenumber = 0;
+
+    users.clear();
+    //Reposiciona o ponteiro de leitura para o início do arquivo
+    users.seekg(0, std::ios::beg);
+
     while(!users.eof()){
         counter = 0;
         linenumber++;
+        //Salva a posição do início da linha
         pos = users.tellg();
+
         while(counter <= 1){
             users >> word;
             counter++;
         }
+
+        //Retorna o número da linha
         if(word == user){
-            find = 1;
             return linenumber;
         }
         std::getline(users, line);
     }
+
     return 0;
 }
 
 std::string registration::get_max_user(){
     std::string user;
     int contador = 0;
+
     users.clear();
+    //Posiciona o ponteiro de leitura para a linha do campeão
     users.seekg(pos_champion);
+
+    //Leitura do usuário com maior pontuação
     while(contador < 2){
         contador++;
         users >> user;
     }
+
     return user;
 }
 
